--- a/.github/workflows/schedule_collections.yml
+++ b/.github/workflows/schedule_collections.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         git config user.name "actions-user"
         git config user.email "actions@github.com"
-        git add collections_playlist.json
+        git add collections_playlist.json collections_list.json 2>/dev/null || true
         git commit -m "Update Collections Playlist" || echo "No changes to Collections"
+        git pull --rebase origin main
         git push
