--- a/.github/workflows/fetch_movie_lists.yml
+++ b/.github/workflows/fetch_movie_lists.yml
@@ -2,18 +2,19 @@ name: Fetch TMDB Movie Lists
 
 on:
   schedule:
-    # Run daily at 6 AM UTC
-    - cron: '0 6 * * *'
+    - cron: '0 4 * * *'  # Daily at 04:00 UTC (12:00 PM GMT+8)
   workflow_dispatch:
     inputs:
       lists:
-        description: 'Lists to fetch (comma-separated: now_playing,popular,top_rated,upcoming,latest_releases)'
+        description: 'Lists to fetch (comma-separated)'
         required: false
         default: 'now_playing,popular,top_rated,upcoming,latest_releases'
 
 jobs:
   fetch-movie-lists:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout repository
@@ -35,8 +36,9 @@ jobs:
         
       - name: Commit and push changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add movie_lists/
           git diff --staged --quiet || git commit -m "Update TMDB movie lists - $(date +'%Y-%m-%d %H:%M')"
+          git pull --rebase origin main || true
           git push
