--- a/.github/workflows/fetch_series_lists.yml
+++ b/.github/workflows/fetch_series_lists.yml
@@ -2,18 +2,19 @@ name: Fetch TMDB Series Lists
 
 on:
   schedule:
-    # Run daily at 7 AM UTC (1 hour after movies)
-    - cron: '0 7 * * *'
+    - cron: '0 6 * * *'  # Daily at 06:00 UTC (2:00 PM GMT+8)
   workflow_dispatch:
     inputs:
       lists:
-        description: 'Lists to fetch (comma-separated: airing_today,on_the_air,popular,top_rated,latest_releases)'
+        description: 'Lists to fetch (comma-separated)'
         required: false
         default: 'airing_today,on_the_air,popular,top_rated,latest_releases'
 
 jobs:
   fetch-series-lists:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout repository
@@ -35,8 +36,9 @@ jobs:
         
       - name: Commit and push changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add series_lists/
           git diff --staged --quiet || git commit -m "Update TMDB series lists - $(date +'%Y-%m-%d %H:%M')"
+          git pull --rebase origin main || true
           git push
