--- a/.github/workflows/schedule_collections.yml
+++ b/.github/workflows/schedule_collections.yml
@@ -2,8 +2,8 @@ name: Fetch TMDB Collections
 
 on:
   schedule:
-    - cron: '0 6 * * 0'  # Weekly on Sunday at 06:00 UTC
-  workflow_dispatch: # Manual trigger
+    - cron: '0 8 * * 0'  # Weekly on Sunday at 08:00 UTC (4:00 PM GMT+8)
+  workflow_dispatch:
 
 jobs:
   fetch-collections:
@@ -18,18 +18,18 @@ jobs:
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.1'
+        php-version: '8.2'
 
     - name: Run Collections Fetch Script
       run: php php/fetch_collections.php
       env:
-        SECRET_API_KEY: ${{ secrets.SECRET_API_KEY }}
+        TMDB_API_KEY: ${{ secrets.SECRET_API_KEY }}
 
     - name: Commit and Push
       run: |
-        git config user.name "actions-user"
-        git config user.email "actions@github.com"
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
         git add collections_playlist.json collections_list.json 2>/dev/null || true
-        git commit -m "Update Collections Playlist" || echo "No changes to Collections"
-        git pull --rebase origin main
+        git commit -m "Update Collections Playlist $(date +'%Y-%m-%d')" || echo "No changes"
+        git pull --rebase origin main || true
         git push
