--- a/.github/workflows/schedule_playlist.yml
+++ b/.github/workflows/schedule_playlist.yml
@@ -1,42 +1,40 @@
-name: Run Playlist Script
+name: Generate Playlists
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # At 00:00 (midnight) UTC
-  workflow_dispatch: # Manual trigger
+    - cron: '0 2 * * *'  # Daily at 02:00 UTC (10:00 AM GMT+8)
+  workflow_dispatch:
 
 jobs:
-  run-script:
+  generate-playlists:
     runs-on: ubuntu-latest
     permissions:
-      issues: write
+      contents: write
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.RUN_ACTIONS }}  # Use GITHUB_TOKEN for authentication
 
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '7.4' # Specify your PHP version
+        php-version: '8.2'
 
-    - name: Run Movie Playlist PHP script
-      run: php php/create_movie_playlist.php
+    - name: Generate Movie Playlist
+      run: php php/generate_playlist.php
       env:
-        SECRET_API_KEY: ${{ secrets.SECRET_API_KEY }}
+        TMDB_API_KEY: ${{ secrets.SECRET_API_KEY }}
 
-    - name: Run TV Playlist PHP script
-      run: php php/create_tv_playlist.php
+    - name: Generate TV Playlist
+      run: php php/generate_tv_playlist.php
       env:
-        SECRET_API_KEY: ${{ secrets.SECRET_API_KEY }}
+        TMDB_API_KEY: ${{ secrets.SECRET_API_KEY }}
 
-    - name: Commit and Push to Public Repository
+    - name: Commit and Push
       run: |
-        git config user.name "actions-user"
-        git config user.email "actions@github.com"
-        git add playlist.m3u8 playlist.json tv_playlist.json
-        git commit -m "Update Playlists" || echo "No changes to Playlists"
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add playlist.json playlist.m3u8 tv_playlist.json
+        git commit -m "Update playlists $(date +'%Y-%m-%d %H:%M')" || echo "No changes"
         git pull --rebase origin main || true
-        git push https://x-access-token:${{ secrets.RUN_ACTIONS }}@github.com/gogetta69/public-files.git
+        git push
