--- a/.github/workflows/update-merge-epgs.yml
+++ b/.github/workflows/update-merge-epgs.yml
@@ -2,7 +2,7 @@ name: Merge EPG Data
 
 on:
   schedule:
-    - cron: '0 */8 * * *'
+    - cron: '0 0 * * *'  # Daily at 00:00 UTC (8:00 AM GMT+8)
   workflow_dispatch: 
   push:
     branches:
@@ -11,17 +11,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+      uses: actions/checkout@v4
 
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.0'
+        php-version: '8.2'
     
     - name: Run Pluto Data Script
       run: php php/grab_pluto_data.php
@@ -32,19 +32,14 @@ jobs:
 
     - name: Add generated files to Git
       run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add Pluto-TV/us.m3u8 Pluto-TV/us.xml
-        git commit -m "Update Pluto TV EPG and playlist"
+        git commit -m "Update Pluto TV EPG and playlist" || echo "No changes"
+        git pull --rebase origin main || true
         git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Print Environment Variables
-      run: printenv
 
     - name: Run PHP Script
       env:
         GAS_KEY: ${{ secrets.GAS_KEY }}
       run: php php/mergeEpgs.php
-
