--- a/.github/workflows/clean-history.yml
+++ b/.github/workflows/clean-history.yml
@@ -2,24 +2,26 @@ name: Clean History of Specific Files
 
 on:
   schedule:
-    # Runs at 00:00 UTC on the 1st of every month
-    - cron: '0 0 1 * *'
+    # Runs at 12:00 UTC on the 1st of every month (8:00 PM GMT+8)
+    - cron: '0 12 1 * *'
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
   clean_history:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Fetch all history for all branches and tags
 
     - name: Configure Git
       run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
 
     - name: Save Current Versions of Files
       run: |
@@ -29,6 +31,7 @@ jobs:
         cp playlist.json /tmp/backup/playlist.json.bak || true
         cp playlist.m3u8 /tmp/backup/playlist.m3u8.bak || true
         cp tv_playlist.json /tmp/backup/tv_playlist.json.bak || true
+        cp collections_playlist.json /tmp/backup/collections_playlist.json.bak || true
         cp Pluto-TV/us.m3u8 /tmp/backup/us.m3u8.bak || true
         cp Pluto-TV/us.xml /tmp/backup/us.xml.bak || true
 
@@ -47,15 +50,10 @@ jobs:
                         --path playlist.json \
                         --path playlist.m3u8 \
                         --path tv_playlist.json \
+                        --path collections_playlist.json \
                         --path Pluto-TV/us.m3u8 \
                         --path Pluto-TV/us.xml \
                         --invert-paths
-
-    - name: List Backup Directory Contents
-      run: ls -al /tmp/backup/
-
-    - name: List Pluto-TV Directory Contents Before Restore
-      run: ls -al Pluto-TV/
 
     - name: Restore Current Versions of Files
       run: |
@@ -65,19 +63,12 @@ jobs:
         cp /tmp/backup/playlist.json.bak playlist.json || echo "File not found: playlist.json"
         cp /tmp/backup/playlist.m3u8.bak playlist.m3u8 || echo "File not found: playlist.m3u8"
         cp /tmp/backup/tv_playlist.json.bak tv_playlist.json || echo "File not found: tv_playlist.json"
+        cp /tmp/backup/collections_playlist.json.bak collections_playlist.json || echo "File not found: collections_playlist.json"
         cp /tmp/backup/us.m3u8.bak Pluto-TV/us.m3u8 || echo "File not found: us.m3u8"
         cp /tmp/backup/us.xml.bak Pluto-TV/us.xml || echo "File not found: us.xml"
-        git add adult-movies.json epg.xml playlist.json playlist.m3u8 tv_playlist.json Pluto-TV/us.m3u8 Pluto-TV/us.xml
-        git commit -m "Re-add current versions of files" || echo "No changes to commit"
+        git add adult-movies.json epg.xml playlist.json playlist.m3u8 tv_playlist.json collections_playlist.json Pluto-TV/us.m3u8 Pluto-TV/us.xml
+        git commit -m "Re-add current versions of files after history clean" || echo "No changes to commit"
 
-    - name: List Pluto-TV Directory Contents After Restore
-      run: ls -al Pluto-TV/
-
-    - name: Clean Up and Force Push
+    - name: Force Push
       run: |
-        git remote add origin https://github.com/gogetta69/public-files.git
-        git fetch origin
-        git branch -u origin/main main
         git push origin main --force
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
