--- a/.github/workflows/clean-history.yml
+++ b/.github/workflows/clean-history.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # Fetch all history for all branches and tags
+        fetch-depth: 0
 
     - name: Configure Git
       run: |
@@ -92,7 +92,7 @@ jobs:
     - name: Install Git Filter-Repo
       run: |
         sudo apt-get update
-        sudo apt-get install -y wget
+        sudo apt-get install -y wget python3
         wget -O ~/git-filter-repo https://raw.githubusercontent.com/newren/git-filter-repo/main/git-filter-repo
         chmod +x ~/git-filter-repo
         sudo mv ~/git-filter-repo /usr/local/bin/
@@ -123,6 +123,9 @@ jobs:
         git add adult-movies.json epg.xml playlist.json playlist.m3u8 tv_playlist.json collections_playlist.json Pluto-TV/us.m3u8 Pluto-TV/us.xml
         git commit -m "Re-add current versions of files after history clean" || echo "No changes to commit"
 
-    - name: Force Push
+    - name: Re-add Remote and Force Push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        git remote add origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git || true
         git push origin main --force
