Fix collections workflow: Add SECRET_API_KEY env variable

--- a/.github/workflows/schedule_collections.yml
+++ b/.github/workflows/schedule_collections.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Run Collections Fetch Script
       run: php php/fetch_collections.php
       env:
+        SECRET_API_KEY: ${{ secrets.SECRET_API_KEY }}
         TMDB_API_KEY: ${{ secrets.SECRET_API_KEY }}
 
     - name: Commit and Push
